Continue with google
commit 8c578e8b6769bb3c4dd02be76f7896983e636cbf
Author: Diego Araujo <97152724+diegoarauj0@users.noreply.github.com>
Date:   Sat Mar 8 02:15:52 2025 -0300

    Logout

commit b6e27a9a57e108f430033e6592111af56c3e9de2
Author: Diego Araujo <97152724+diegoarauj0@users.noreply.github.com>
Date:   Fri Mar 7 21:03:59 2025 -0300

    GoogleAuthenticationController

commit bebdff32f94609fed54ffe0f3f0b875755caab44
Author: Diego Araujo <97152724+diegoarauj0@users.noreply.github.com>
Date:   Fri Mar 7 19:29:28 2025 -0300

    Alterando o AuthenticationController

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 MONGODB="mongodb://localhost:27017"
+REDIS="redis://localhost:6379"
+
 SESSION_SECRET="cat"
 PASSWORD_SALT=10
-REDIS="redis://localhost:6379"
 PORT=3000
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+GOOGLE_REDIRECT_URL=""
