--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
+    "googleapis": "^146.0.0",
     "mongoose": "^8.12.1",
     "redis": "^4.7.0",
     "validator": "^13.12.0"
